@@ -9,9 +9,19 @@ Memosyne analysis:
 
 Mnemosyne 1.0:
 
+-fix grade statistics tab
+
+-compact preference dialog
+
+-example plugin
+
 -automatic backups
 
--give more feedback on import failure
+-tip of the day
+
+-give more feedback on import failure, plugin failure
+
+-USB key version as alternative for web based revision
 
 -small version of Mnemosyne logo, add logo to about and getting started
 
@@ -21,11 +31,12 @@ Mnemosyne 1.0:
   relative CSS layout 
     http://www.webreference.com/authoring/style/sheets/css_mastery2/
     http://www.cssbasics.com/
-  better mailing list / forums page
-  contributors page
+  community page: mailing list, forums, contributors page
   feature page
-  better explanation of short term / long term
+  better explanation of short term / long term?
+  faq on non latin size
   faq on backlog
+  faq on grade 0 items per day / session
   faq on spartan options screen / config screen
   update screenshots
   document new features
@@ -45,14 +56,14 @@ Mnemosyne 1.0.x series:
 
 -write some example plugins
 
+-show actual interval in status bar
+
 
 
 Mnemosyne 1.1: (note: needs to be combined with the Qt4 update from 1.2)
 
 -move to sqlite backend (encode card relations and tag hierarchy in name, 
  multiple category fields per card)
-
--What to do with StartTime object?
 
 -rename edit_items, items, product tour at the source level
 
@@ -91,6 +102,8 @@ Mnemosyne 1.2:
 
 -consistent editing of vice versa and three-sided cards
 
+-three sided tsv inport
+
 -option to type right answer
 
 -remove 'check duplicates when adding' option
@@ -99,9 +112,7 @@ Mnemosyne 1.2:
 
 Mnemosyne 1.3:
 
--rename categories to tags?
-
--GUI support for multiple tags per card (Note: for tags relating
+-GUI support for multiple categories per card (Note: for categories relating
  to direction of card, we probably don't need to specify them explicitly,
  but can read them off the IDs.)
 
@@ -115,10 +126,10 @@ Mnemosyne 1.4
 
 Mnemosyne 1.5
 
--hierarchical tags
+-hierarchical categories
 
--advanced deck manager, with tree view of tags, drag and drop
- to change tags, count of items/facts...
+-advanced deck manager, with tree view, drag and drop to change categories, 
+ count of cards/facts...
 
 -regular expression search?
 
@@ -146,11 +157,12 @@ Mnemosyne 1.6
 
 -save category state as plugin
 
+-remap keys as plugin
+
+-active alert as plugin
 
 
 Miscellaneous
-
--tip of the day
 
 -unify number shortcuts (with and without Ctrl)
 
@@ -159,8 +171,6 @@ Miscellaneous
 -clean up interval when importing from txt
 
 -change file suffix when changing export format
-
--USB key version as alternative for web based revision
 
 -recreate user_id and log_index from files in history folder
 
@@ -179,6 +189,8 @@ Miscellaneous
 -per category statistics in 'Activate categories'
 
 -icon handling patch Dirk
+
+-plugin manager
 
 -manual
 
